--- a/Assignment_2/codespace-backend/docker-compose.yml
+++ b/Assignment_2/codespace-backend/docker-compose.yml
@@ -1,9 +1,15 @@
-version: '3'
-
+# docker-compose.yml
 services:
-  mongodb: 
-    image: mongo:latest
-    environment:
-      - MONGODB_DATABASE="codespace-data"
+  mongodb:
+    image: mongo:latest               # Use the official MongoDB image temporarily
+    container_name: mongodb_temp
     ports:
-      - 27017:27017
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_DATABASE=codespace-data   # Temporary test database
+    volumes:
+      - mongodb_data:/data/db
+  # Other services like NestJS can also be defined here if needed
+
+volumes:
+  mongodb_data:
