--- a/Assignment_3/codespace-backend/.env
+++ b/Assignment_3/codespace-backend/.env
@@ -3,3 +3,7 @@ JWT_SECRET="JWT secret"
 JWT_EXPIRE_IN=1h
 REFRESH_JWT_SECRET="Refresh JWT secret"
 REFRESH_JWT_EXPIRE_IN=1d
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-email-password
