--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
 
 # Operating system files
 .DS_Store
