--- a/Assignment_4/codespace-mobile/package.json
+++ b/Assignment_4/codespace-mobile/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ionic/cli": "^7.2.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
