--- a/Assignment_4/codespace-mobile/package.json
+++ b/Assignment_4/codespace-mobile/package.json
@@ -15,8 +15,10 @@
     "@ionic/cli": "^7.2.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@ionic/storage": "^4.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
